# codex-computer-use-firefox-zen

./: .gitignore  AMO_LISTING.md  CHANGELOG.md  PORT_STATUS.md  PRIVACY.md  README.md  package.json  version.json
.github/workflows/: release.yml
extension/: background.js  companion-required.css  companion-required.html  companion-required.js  firefox-cdp-bridge.js  firefox-compat.js  manifest.json  microphone-permission.html
extension/assets/: microphone-permission-ALXR_a3q.css
extension/chunks/: microphone-permission-Cdowufbn.js
extension/codex/: build-info.json
extension/codex-sidepanel/: firefox-focus-compat.js  index.html
extension/codex-sidepanel/assets/: 3Dmol-C8F7dFIS.js  3Dmol-C8F7dFIS.js.map  _basePickBy-Bh1F_Gqe.js  _basePickBy-Bh1F_Gqe.js.map  _baseUniq-BhQ8T-6U.js  _baseUniq-BhQ8T-6U.js.map  abap-BYPXdrIM.js  abap-BYPXdrIM.js.map  ada-B-OMCqC5.js  (+1491 more)
extension/content-scripts/: codex.js  foreign-frame-monitor.js
installer/macos/: com.openai.codexextension.json
installer/windows/: codex-firefox-bridge.iss
native-host/: Cargo.toml  NativeHostProxy.cs
native-host/src/: main.rs
npm/: README.md  cli.mjs  lib.mjs  package.json
npm/test/: lib.test.mjs
scripts/: check-version.mjs  package-extension.ps1  register-native-host.ps1  register-native-host.sh  set-version.mjs  unregister-native-host.ps1  unregister-native-host.sh  verify-extension.mjs
tests/: NativeHostFixture.cs  test-firefox-compat.mjs  test-native-host.mjs  test-sidepanel-focus-compat.mjs
tests/fixtures/: browser-control.html  frame-child.html  frame-grandchild.html  upload.txt
(+1 files in other folders)
