[package]
name = "codex-firefox-bridge"
version = "1.4.1"
edition = "2021"
description = "Firefox native-messaging bridge for the installed OpenAI Codex extension host"
license = "UNLICENSED"
publish = false

[dependencies]
base64 = "0.22"
regex = "1.11"
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
